--- a/suiiii/suiiii.csproj
+++ b/suiiii/suiiii.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="main-menu.cs" />
+    <Compile Include="Opgaver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
