--- a/suiiii/suiiii.csproj
+++ b/suiiii/suiiii.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bil.cs" />
+    <Compile Include="book.cs" />
+    <Compile Include="Furniture.cs" />
     <Compile Include="main-menu.cs" />
     <Compile Include="Opgaver.cs" />
     <Compile Include="Program.cs" />
